# FastDeploy

./: .clang-format  .clang_format.hook  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  FastDeploy.cmake.in  FastDeployCSharp.cmake  FastDeployCSharp.cmake.in  FastDeployUtils.cmake  README.md  README_CN.md  README_EN.md  README_HINDI.md  README_JPN.md  README_new.md  ThirdPartyNotices.txt  VERSION_NUMBER  copy_file.py  requirements.txt  setup.py
benchmark/cpp/: CMakeLists.txt  README.md  benchmark.cc  benchmark.sh  benchmark_arm.sh  benchmark_cascadercnn.cc  benchmark_dino.cc  benchmark_fasterrcnn.cc  benchmark_fcos.cc  benchmark_gfl.cc  benchmark_gpu.sh  benchmark_gpu_trt.sh  benchmark_maskrcnn.cc  benchmark_picodet.cc  benchmark_ppcls.cc  benchmark_ppdet.cc  benchmark_ppmatting.cc  benchmark_ppocr.cc  benchmark_ppocr_cls.cc  benchmark_ppocr_det.cc  benchmark_ppocr_rec.cc  benchmark_ppocr_table.cc  benchmark_ppseg.cc  benchmark_ppshituv2_det.cc  benchmark_ppshituv2_rec.cc  benchmark_ppyolo.cc  benchmark_ppyoloe.cc  benchmark_ppyoloe_r.cc  benchmark_ppyoloe_r_sophgo.cc  benchmark_ppyolov5.cc  benchmark_ppyolov6.cc  benchmark_ppyolov7.cc  benchmark_ppyolov8.cc  benchmark_ppyolox.cc  benchmark_precision_ppyolov8.cc  benchmark_retinanet.cc  benchmark_rtmdet.cc  benchmark_ssd.cc  benchmark_structurev2_layout.cc  benchmark_structurev2_table.cc  (+20 more)
benchmark/paddlex/: .gitignore  CMakeLists.txt  README.md  benchmark.cc  benchmark_gpu.sh  benchmark_gpu_trt.sh  benchmark_pp3d_caddn.cc  benchmark_pp3d_cadnn.cc  benchmark_pp3d_centerpoint.cc  benchmark_ppcls.cc  benchmark_ppdet.cc  benchmark_ppocr_det.cc  benchmark_ppocr_rec.cc  benchmark_ppseg.cc  benchmark_ppshituv2_det.cc  benchmark_ppshituv2_rec.cc  benchmark_structurev2_layout.cc  benchmark_structurev2_table.cc  benchmark_x86.sh  flags.h  get_models.sh  run_gpu.sh  run_x86.sh
csharp/: CMakeLists.txt  README.md  README_CN.md
csharp/fastdeploy/: enum_varaibles.cs  runtime_option.cs  types_internal_c.cs
examples/: .gitignore  CMakeLists.txt
examples/resources/: .gitignore
examples/runtime/: README.md  README_CN.md
examples/slim/: README.md
examples/text/: compute.h  ernie_information_extraction.cc  ernie_tokencls.cc
examples/vision/: README.md  README_CN.md  README_EN.md  biubug6_retinaface.cc  deepcam_yolov5face.cc  deepinsight_arcface.cc  deepinsight_cosface.cc  deepinsight_insightface_rec.cc  deepinsight_partial_fc.cc  deepinsight_scrfd.cc  deepinsight_vpl.cc  linzaer_ultraface.cc  megvii_yolox.cc  meituan_yolov6.cc  ppdet_ppyoloe.cc  ppocr_dbdetector.cc  ppogg_yolov5lite.cc  ppseg_unet.cc  rangilyu_nanodet_plus.cc  ultralytics_yolov5.cc  wongkinyiu_scaledyolov4.cc  wongkinyiu_yolor.cc  wongkinyiu_yolov7.cc  zhkkke_modnet.cc
paddle2onnx/proto/: CMakeLists.txt  p2o_paddle.proto
poros/: CMakeLists.txt  LICENSE  README.md
poros/cmake/: FindTensorRT.cmake
poros/docs/: Benchmark.md
poros/example/: test_resnet.py
poros/python/: setup.py
poros/tools/: main.cpp
poros/unittest/: CMakeLists.txt
serving/: CMakeLists.txt  Dockerfile  Dockerfile_CUDA_11_2  Dockerfile_CUDA_11_2_TRT_8_5_PADDLE_2_4_2  Dockerfile_CUDA_11_4_TRT_8_4  Dockerfile_cpu  Dockerfile_cuda11_2  Dockerfile_cuda11_2_p1  Dockerfile_cuda11_6  Dockerfile_ipu  Dockerfile_xpu  Dockerfile_xpu_encrypt_auth  Dockfile_cpu  README.md  README_CN.md  README_EN.md
serving/Docker/: Dockerfile_CUDA_11_6
serving/scripts/: build.sh  build_fd_backend.sh  build_fd_cuda_11_2.sh  build_fd_cuda_11_2_trt_8_5_paddle_2_4_2.sh  build_fd_cuda_11_6.sh  build_fd_ipu.sh  build_fd_runtime.sh  build_fd_server.sh  build_fd_vison.sh  build_fd_xpu.sh  build_fd_xpu_encrypt_auth.sh  build_triton_fd_backend.sh
serving/src/: fastdeploy_backend_utils.cc  fastdeploy_backend_utils.h  fastdeploy_runtime.cc  libtriton_fastdeploy.ldscript
streamer/: CMakeLists.txt  README_CN.md  README_EN.md  setup.py
streamer/python/: setup.py
streamer/scripts/: build_gpu.sh  process_libraries.py  process_libraries.py.in
streamer/src/: __init__.py  fd_streamer.cc  fd_streamer.h  fd_streamer.py  fd_streamer_config.h  fd_streamer_pybind.cc
tests/: CMakeLists.txt  gtest_main.cc  gtest_utils.h  test_reduce.cc
tests/acc_eval/: README.md
tests/core/: test_fd_tensor.cc
tests/eval_example/: test_facelandmark1000.py  test_pfld.py  test_ppmatting.py  test_pptinypose.py  test_pptracking.py  test_quantize_diff.py  test_rvm.py  test_yolov5cls.py
tests/function/: test_cast.cc  test_clip.cc  test_concat.cc  test_cumprod.cc  test_elementwise.cc  test_float16.cc  test_full.cc  test_gather_scatter_along_axis.cc  test_isfinite.cc  test_linspace.cc  test_math.cc  test_pad.cc  test_quantile.cc  test_reduce.cc  test_slice.cc  test_softmax.cc  test_sort.cc  test_split.cc  test_tile.cc  test_transpose.cc
tests/models/: README.md  runtime_config.py  test_animegan.py  test_basicvsr.py  test_blazeface.py  test_centerface.py  test_edvr.py  test_encryption.py  test_facelandmark1000.py  test_faster_rcnn.py  test_fastestdet.py  test_mask_rcnn.py  test_mobilenetv2.py  test_pfld.py  test_picodet.py  test_pipnet.py  test_pp_yolox.py  test_ppliteseg.py  test_ppmatting.py  test_ppmsvsr.py  test_ppocrv3.py  test_pptinypose.py  test_pptracking.py  test_ppyolo.py  test_ppyoloe.py  test_quantize_diff.py  test_rvm.py  test_yolov3.py  test_yolov5.py  test_yolov5cls.py  test_yolov5seg.py  test_yolov7.py  test_yolov7face.py
tests/publish_task_example/: CMakeLists.txt  infer_ppyoloe.py
tests/release_task/: CMakeLists.txt  compare_with_gt.py  cpp_run.bat  cpp_run.sh  download.py  gflags.cmake  infer_ppyoloe.cc  infer_ppyoloe.py  py_run.bat  py_run.sh  run.sh
tests/timvx/: CMakeLists.txt  common.h  download_models.py  models_url.txt  prepare.sh  run_test.sh  test_clas.cc  test_ppliteseg.cc  test_ppyoloe.cc  test_yolov5.cc
tests/vision_preprocess/: CMakeCache.txt  Makefile  cmake_install.cmake  test_vision_cast.cc  test_vision_center_crop.cc  test_vision_colorspace_convert.cc  test_vision_convert.cc  test_vision_crop.cc  test_vision_hwc2chw.cc  test_vision_limit_long.cc  (+8 more)
(+4928 files in other folders)
